[package]
name = "lastfm2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"